fix gap on mobile

--- a/src/components/Home/Benefit.css
+++ b/src/components/Home/Benefit.css
@@ -218,7 +218,7 @@
     height: 51.06px;
   }
   .cartdetail {
-    gap: 1px;
+    gap: 15px;
     padding: 29px 13px;
   }
   .cartdetailhead {
